--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                 of work.
             </p>
             <p>
-                based on your requirements, we can provide a complete offering or just
+                Bclear
+                ased on your requirements, we can provide a complete offering or just
                 the piece you need.
             </p>
         </div>
